<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"

        android:layout_marginTop="137dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/inria_serif_bold_italic"
        android:gravity="center"
        android:text="@string/set_up_account"
        android:textColor="@color/button_color"
        android:textColorHighlight="#433030"
        android:textColorLink="#8A5C5C"
        android:textSize="50dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameInput"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="369dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="276dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/repeat_register_password"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="206dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="293dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="120dp"
        android:text="@string/create_account"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>