<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/log_in_page_text"

        android:layout_width="281dp"
        android:layout_height="57dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:fontFamily="@font/inria_serif_bold_italic"
        android:textColor="@color/button_color"
        android:textSize="50dp"
        android:text="Log-In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fingerprint_login"
        android:layout_width="286dp"
        android:layout_height="62dp"
        android:layout_marginTop="204dp"
        android:text="@string/fingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="281dp"
        android:layout_height="53dp"
        android:layout_marginTop="288dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="281dp"
        android:layout_height="57dp"
        android:layout_marginTop="76dp"
        android:text="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>